-- WARNING: This schema is for context only and is not meant to be run.
-- Table order and constraints may not be valid for execution.

CREATE TABLE public.Activity (
  id uuid NOT NULL DEFAULT gen_random_uuid(),
  dealId uuid NOT NULL,
  type text NOT NULL,
  title text NOT NULL,
  description text,
  metadata jsonb,
  createdAt timestamp with time zone DEFAULT now(),
  userId uuid,
  scheduledAt timestamp with time zone,
  completedAt timestamp with time zone,
  participants ARRAY,
  CONSTRAINT Activity_pkey PRIMARY KEY (id),
  CONSTRAINT Activity_dealId_fkey FOREIGN KEY (dealId) REFERENCES public.Deal(id),
  CONSTRAINT Activity_userId_fkey FOREIGN KEY (userId) REFERENCES public.User(id)
);
CREATE TABLE public.AuditLog (
  id uuid NOT NULL DEFAULT gen_random_uuid(),
  userId uuid,
  action text NOT NULL,
  entityType text NOT NULL,
  entityId uuid,
  changes jsonb,
  ipAddress text,
  userAgent text,
  createdAt timestamp with time zone DEFAULT now(),
  userEmail text,
  userRole text,
  entityName text,
  description text,
  metadata jsonb DEFAULT '{}'::jsonb,
  requestId text,
  severity text DEFAULT 'INFO'::text,
  CONSTRAINT AuditLog_pkey PRIMARY KEY (id)
);
CREATE TABLE public.ChatMessage (
  id uuid NOT NULL DEFAULT gen_random_uuid(),
  dealId uuid,
  userId text,
  role text NOT NULL CHECK (role = ANY (ARRAY['user'::text, 'assistant'::text, 'system'::text])),
  content text NOT NULL,
  metadata jsonb DEFAULT '{}'::jsonb,
  createdAt timestamp with time zone DEFAULT now(),
  CONSTRAINT ChatMessage_pkey PRIMARY KEY (id),
  CONSTRAINT ChatMessage_dealId_fkey FOREIGN KEY (dealId) REFERENCES public.Deal(id)
);
CREATE TABLE public.Company (
  id uuid NOT NULL DEFAULT gen_random_uuid(),
  name text NOT NULL,
  industry text,
  description text,
  website text,
  createdAt timestamp with time zone DEFAULT now(),
  updatedAt timestamp with time zone DEFAULT now(),
  logo text,
  headquarters text,
  foundedYear integer,
  employeeCount integer,
  annualRevenue double precision,
  linkedinUrl text,
  CONSTRAINT Company_pkey PRIMARY KEY (id)
);
CREATE TABLE public.Contact (
  id uuid NOT NULL DEFAULT gen_random_uuid(),
  firstName text NOT NULL,
  lastName text NOT NULL,
  email text,
  phone text,
  title text,
  company text,
  type text NOT NULL DEFAULT 'OTHER'::text CHECK (type = ANY (ARRAY['BANKER'::text, 'ADVISOR'::text, 'EXECUTIVE'::text, 'LP'::text, 'LEGAL'::text, 'OTHER'::text])),
  linkedinUrl text,
  notes text,
  tags ARRAY DEFAULT '{}'::text[],
  lastContactedAt timestamp with time zone,
  createdBy uuid,
  createdAt timestamp with time zone NOT NULL DEFAULT now(),
  updatedAt timestamp with time zone NOT NULL DEFAULT now(),
  CONSTRAINT Contact_pkey PRIMARY KEY (id)
);
CREATE TABLE public.ContactDeal (
  id uuid NOT NULL DEFAULT gen_random_uuid(),
  contactId uuid NOT NULL,
  dealId uuid NOT NULL,
  role text DEFAULT 'OTHER'::text CHECK (role = ANY (ARRAY['BANKER'::text, 'ADVISOR'::text, 'BOARD_MEMBER'::text, 'MANAGEMENT'::text, 'OTHER'::text])),
  createdAt timestamp with time zone NOT NULL DEFAULT now(),
  CONSTRAINT ContactDeal_pkey PRIMARY KEY (id),
  CONSTRAINT ContactDeal_contactId_fkey FOREIGN KEY (contactId) REFERENCES public.Contact(id),
  CONSTRAINT ContactDeal_dealId_fkey FOREIGN KEY (dealId) REFERENCES public.Deal(id)
);
CREATE TABLE public.ContactInteraction (
  id uuid NOT NULL DEFAULT gen_random_uuid(),
  contactId uuid NOT NULL,
  type text NOT NULL DEFAULT 'NOTE'::text CHECK (type = ANY (ARRAY['NOTE'::text, 'MEETING'::text, 'CALL'::text, 'EMAIL'::text, 'OTHER'::text])),
  title text,
  description text,
  date timestamp with time zone DEFAULT now(),
  createdBy uuid,
  createdAt timestamp with time zone NOT NULL DEFAULT now(),
  CONSTRAINT ContactInteraction_pkey PRIMARY KEY (id),
  CONSTRAINT ContactInteraction_contactId_fkey FOREIGN KEY (contactId) REFERENCES public.Contact(id)
);
CREATE TABLE public.ContactRelationship (
  id uuid NOT NULL DEFAULT gen_random_uuid(),
  contactId uuid NOT NULL,
  relatedContactId uuid NOT NULL,
  type text NOT NULL CHECK (type = ANY (ARRAY['KNOWS'::text, 'REFERRED_BY'::text, 'REPORTS_TO'::text, 'COLLEAGUE'::text, 'INTRODUCED_BY'::text])),
  notes text,
  createdBy uuid,
  createdAt timestamp with time zone DEFAULT now(),
  CONSTRAINT ContactRelationship_pkey PRIMARY KEY (id),
  CONSTRAINT ContactRelationship_contactId_fkey FOREIGN KEY (contactId) REFERENCES public.Contact(id),
  CONSTRAINT ContactRelationship_relatedContactId_fkey FOREIGN KEY (relatedContactId) REFERENCES public.Contact(id)
);
CREATE TABLE public.Conversation (
  id uuid NOT NULL DEFAULT gen_random_uuid(),
  dealId uuid,
  userId uuid NOT NULL,
  title text,
  createdAt timestamp with time zone DEFAULT now(),
  updatedAt timestamp with time zone DEFAULT now(),
  CONSTRAINT Conversation_pkey PRIMARY KEY (id),
  CONSTRAINT Conversation_dealId_fkey FOREIGN KEY (dealId) REFERENCES public.Deal(id),
  CONSTRAINT Conversation_userId_fkey FOREIGN KEY (userId) REFERENCES public.User(id)
);
CREATE TABLE public.Deal (
  id uuid NOT NULL DEFAULT gen_random_uuid(),
  name text NOT NULL,
  companyId uuid NOT NULL,
  stage text NOT NULL DEFAULT 'INITIAL_REVIEW'::text,
  status text NOT NULL DEFAULT 'ACTIVE'::text,
  irrProjected double precision,
  mom double precision,
  ebitda double precision,
  revenue double precision,
  industry text,
  dealSize double precision,
  description text,
  aiThesis text,
  icon text DEFAULT 'business_center'::text,
  lastDocument text,
  lastDocumentUpdated timestamp with time zone,
  createdAt timestamp with time zone DEFAULT now(),
  updatedAt timestamp with time zone DEFAULT now(),
  assignedTo uuid,
  priority text DEFAULT 'MEDIUM'::text,
  targetCloseDate date,
  actualCloseDate date,
  source text,
  tags ARRAY,
  extractionConfidence integer,
  needsReview boolean DEFAULT false,
  reviewReasons jsonb DEFAULT '[]'::jsonb,
  aiRisks jsonb,
  aiCacheUpdatedAt timestamp with time zone,
  CONSTRAINT Deal_pkey PRIMARY KEY (id),
  CONSTRAINT Deal_companyId_fkey FOREIGN KEY (companyId) REFERENCES public.Company(id),
  CONSTRAINT Deal_assignedTo_fkey FOREIGN KEY (assignedTo) REFERENCES public.User(id)
);
CREATE TABLE public.DealTeamMember (
  id uuid NOT NULL DEFAULT gen_random_uuid(),
  dealId uuid NOT NULL,
  userId uuid NOT NULL,
  role text NOT NULL DEFAULT 'MEMBER'::text,
  addedAt timestamp with time zone DEFAULT now(),
  accessLevel text DEFAULT 'view'::text CHECK ("accessLevel" = ANY (ARRAY['view'::text, 'edit'::text, 'admin'::text])),
  CONSTRAINT DealTeamMember_pkey PRIMARY KEY (id),
  CONSTRAINT DealTeamMember_dealId_fkey FOREIGN KEY (dealId) REFERENCES public.Deal(id),
  CONSTRAINT DealTeamMember_userId_fkey FOREIGN KEY (userId) REFERENCES public.User(id)
);
CREATE TABLE public.Document (
  id uuid NOT NULL DEFAULT gen_random_uuid(),
  dealId uuid NOT NULL,
  name text NOT NULL,
  type text NOT NULL DEFAULT 'OTHER'::text,
  fileUrl text,
  fileSize integer,
  mimeType text,
  extractedData jsonb,
  confidence double precision,
  createdAt timestamp with time zone DEFAULT now(),
  updatedAt timestamp with time zone DEFAULT now(),
  folderId uuid,
  uploadedBy uuid,
  aiAnalysis jsonb,
  aiAnalyzedAt timestamp with time zone,
  tags ARRAY,
  isHighlighted boolean DEFAULT false,
  extractedText text,
  status text DEFAULT 'pending'::text,
  embeddingStatus text DEFAULT 'pending'::text CHECK ("embeddingStatus" = ANY (ARRAY['pending'::text, 'processing'::text, 'completed'::text, 'failed'::text])),
  chunkCount integer DEFAULT 0,
  embeddedAt timestamp with time zone,
  CONSTRAINT Document_pkey PRIMARY KEY (id),
  CONSTRAINT Document_dealId_fkey FOREIGN KEY (dealId) REFERENCES public.Deal(id),
  CONSTRAINT Document_folderId_fkey FOREIGN KEY (folderId) REFERENCES public.Folder(id),
  CONSTRAINT Document_uploadedBy_fkey FOREIGN KEY (uploadedBy) REFERENCES public.User(id)
);
CREATE TABLE public.DocumentChunk (
  id uuid NOT NULL DEFAULT gen_random_uuid(),
  documentId uuid NOT NULL,
  dealId uuid,
  chunkIndex integer NOT NULL,
  content text NOT NULL,
  embedding USER-DEFINED,
  tokenCount integer,
  metadata jsonb DEFAULT '{}'::jsonb,
  createdAt timestamp with time zone DEFAULT now(),
  updatedAt timestamp with time zone DEFAULT now(),
  CONSTRAINT DocumentChunk_pkey PRIMARY KEY (id),
  CONSTRAINT DocumentChunk_documentId_fkey FOREIGN KEY (documentId) REFERENCES public.Document(id),
  CONSTRAINT DocumentChunk_dealId_fkey FOREIGN KEY (dealId) REFERENCES public.Deal(id)
);
CREATE TABLE public.FinancialStatement (
  id uuid NOT NULL DEFAULT gen_random_uuid(),
  dealId uuid NOT NULL,
  documentId uuid,
  statementType text NOT NULL CHECK ("statementType" = ANY (ARRAY['INCOME_STATEMENT'::text, 'BALANCE_SHEET'::text, 'CASH_FLOW'::text])),
  period text NOT NULL,
  periodType text NOT NULL DEFAULT 'HISTORICAL'::text CHECK ("periodType" = ANY (ARRAY['HISTORICAL'::text, 'PROJECTED'::text, 'LTM'::text])),
  lineItems jsonb NOT NULL DEFAULT '{}'::jsonb,
  currency text NOT NULL DEFAULT 'USD'::text,
  unitScale text NOT NULL DEFAULT 'MILLIONS'::text CHECK ("unitScale" = ANY (ARRAY['MILLIONS'::text, 'THOUSANDS'::text, 'ACTUALS'::text])),
  extractionConfidence integer NOT NULL DEFAULT 0 CHECK ("extractionConfidence" >= 0 AND "extractionConfidence" <= 100),
  extractionSource text DEFAULT 'gpt4o'::text CHECK ("extractionSource" = ANY (ARRAY['gpt4o'::text, 'azure'::text, 'vision'::text, 'manual'::text])),
  extractedAt timestamp with time zone,
  reviewedAt timestamp with time zone,
  reviewedBy uuid,
  createdAt timestamp with time zone NOT NULL DEFAULT now(),
  updatedAt timestamp with time zone NOT NULL DEFAULT now(),
  isActive boolean NOT NULL DEFAULT true,
  mergeStatus text NOT NULL DEFAULT 'auto'::text CHECK ("mergeStatus" = ANY (ARRAY['auto'::text, 'needs_review'::text, 'user_resolved'::text])),
  CONSTRAINT FinancialStatement_pkey PRIMARY KEY (id),
  CONSTRAINT FinancialStatement_dealId_fkey FOREIGN KEY (dealId) REFERENCES public.Deal(id),
  CONSTRAINT FinancialStatement_documentId_fkey FOREIGN KEY (documentId) REFERENCES public.Document(id),
  CONSTRAINT FinancialStatement_reviewedBy_fkey FOREIGN KEY (reviewedBy) REFERENCES public.User(id)
);
CREATE TABLE public.Folder (
  id uuid NOT NULL DEFAULT gen_random_uuid(),
  dealId uuid NOT NULL,
  parentId uuid,
  name text NOT NULL,
  description text,
  fileCount integer DEFAULT 0,
  isRestricted boolean DEFAULT false,
  sortOrder integer DEFAULT 0,
  createdBy uuid,
  createdAt timestamp with time zone DEFAULT now(),
  updatedAt timestamp with time zone DEFAULT now(),
  CONSTRAINT Folder_pkey PRIMARY KEY (id),
  CONSTRAINT Folder_dealId_fkey FOREIGN KEY (dealId) REFERENCES public.Deal(id),
  CONSTRAINT Folder_parentId_fkey FOREIGN KEY (parentId) REFERENCES public.Folder(id),
  CONSTRAINT Folder_createdBy_fkey FOREIGN KEY (createdBy) REFERENCES public.User(id)
);
CREATE TABLE public.FolderInsight (
  id uuid NOT NULL DEFAULT gen_random_uuid(),
  folderId uuid NOT NULL,
  summary text,
  completionPercent integer DEFAULT 0,
  redFlags jsonb DEFAULT '[]'::jsonb,
  missingDocuments jsonb DEFAULT '[]'::jsonb,
  generatedAt timestamp with time zone DEFAULT now(),
  CONSTRAINT FolderInsight_pkey PRIMARY KEY (id),
  CONSTRAINT FolderInsight_folderId_fkey FOREIGN KEY (folderId) REFERENCES public.Folder(id)
);
CREATE TABLE public.Invitation (
  id uuid NOT NULL DEFAULT gen_random_uuid(),
  email text NOT NULL,
  firmName text NOT NULL,
  role text NOT NULL DEFAULT 'MEMBER'::text CHECK (role = ANY (ARRAY['ADMIN'::text, 'MEMBER'::text, 'VIEWER'::text])),
  invitedBy uuid NOT NULL,
  status text NOT NULL DEFAULT 'PENDING'::text CHECK (status = ANY (ARRAY['PENDING'::text, 'ACCEPTED'::text, 'EXPIRED'::text, 'REVOKED'::text])),
  token text NOT NULL UNIQUE,
  expiresAt timestamp with time zone NOT NULL,
  createdAt timestamp with time zone DEFAULT now(),
  acceptedAt timestamp with time zone,
  CONSTRAINT Invitation_pkey PRIMARY KEY (id),
  CONSTRAINT Invitation_invitedBy_fkey FOREIGN KEY (invitedBy) REFERENCES public.User(id)
);
CREATE TABLE public.Memo (
  id uuid NOT NULL DEFAULT gen_random_uuid(),
  dealId uuid,
  title text NOT NULL,
  projectName text,
  type text DEFAULT 'IC_MEMO'::text CHECK (type = ANY (ARRAY['IC_MEMO'::text, 'TEASER'::text, 'SUMMARY'::text, 'CUSTOM'::text])),
  status text DEFAULT 'DRAFT'::text CHECK (status = ANY (ARRAY['DRAFT'::text, 'REVIEW'::text, 'FINAL'::text, 'ARCHIVED'::text])),
  sponsor text,
  memoDate date,
  version integer DEFAULT 1,
  createdBy uuid,
  lastEditedBy uuid,
  collaborators ARRAY DEFAULT '{}'::uuid[],
  complianceChecked boolean DEFAULT false,
  complianceNotes text,
  metadata jsonb DEFAULT '{}'::jsonb,
  createdAt timestamp with time zone DEFAULT now(),
  updatedAt timestamp with time zone DEFAULT now(),
  CONSTRAINT Memo_pkey PRIMARY KEY (id),
  CONSTRAINT Memo_dealId_fkey FOREIGN KEY (dealId) REFERENCES public.Deal(id)
);
CREATE TABLE public.MemoChatMessage (
  id uuid NOT NULL DEFAULT gen_random_uuid(),
  conversationId uuid NOT NULL,
  role text NOT NULL CHECK (role = ANY (ARRAY['user'::text, 'assistant'::text, 'system'::text])),
  content text NOT NULL,
  metadata jsonb DEFAULT '{}'::jsonb,
  createdAt timestamp with time zone DEFAULT now(),
  CONSTRAINT MemoChatMessage_pkey PRIMARY KEY (id),
  CONSTRAINT MemoChatMessage_conversationId_fkey FOREIGN KEY (conversationId) REFERENCES public.MemoConversation(id)
);
CREATE TABLE public.MemoConversation (
  id uuid NOT NULL DEFAULT gen_random_uuid(),
  memoId uuid NOT NULL,
  userId uuid,
  title text,
  createdAt timestamp with time zone DEFAULT now(),
  updatedAt timestamp with time zone DEFAULT now(),
  CONSTRAINT MemoConversation_pkey PRIMARY KEY (id),
  CONSTRAINT MemoConversation_memoId_fkey FOREIGN KEY (memoId) REFERENCES public.Memo(id),
  CONSTRAINT MemoConversation_userId_fkey FOREIGN KEY (userId) REFERENCES public.User(id)
);
CREATE TABLE public.MemoSection (
  id uuid NOT NULL DEFAULT gen_random_uuid(),
  memoId uuid NOT NULL,
  type text NOT NULL CHECK (type = ANY (ARRAY['EXECUTIVE_SUMMARY'::text, 'COMPANY_OVERVIEW'::text, 'FINANCIAL_PERFORMANCE'::text, 'MARKET_DYNAMICS'::text, 'COMPETITIVE_LANDSCAPE'::text, 'RISK_ASSESSMENT'::text, 'DEAL_STRUCTURE'::text, 'VALUE_CREATION'::text, 'EXIT_STRATEGY'::text, 'RECOMMENDATION'::text, 'APPENDIX'::text, 'CUSTOM'::text])),
  title text NOT NULL,
  content text,
  aiGenerated boolean DEFAULT false,
  aiModel text,
  aiPrompt text,
  sortOrder integer NOT NULL DEFAULT 0,
  citations jsonb DEFAULT '[]'::jsonb,
  tableData jsonb,
  chartConfig jsonb,
  status text DEFAULT 'DRAFT'::text CHECK (status = ANY (ARRAY['DRAFT'::text, 'APPROVED'::text, 'NEEDS_REVIEW'::text])),
  createdAt timestamp with time zone DEFAULT now(),
  updatedAt timestamp with time zone DEFAULT now(),
  CONSTRAINT MemoSection_pkey PRIMARY KEY (id),
  CONSTRAINT MemoSection_memoId_fkey FOREIGN KEY (memoId) REFERENCES public.Memo(id)
);
CREATE TABLE public.MemoTemplate (
  id uuid NOT NULL DEFAULT gen_random_uuid(),
  name character varying NOT NULL,
  description text,
  category character varying DEFAULT 'INVESTMENT_MEMO'::character varying,
  isGoldStandard boolean DEFAULT false,
  isLegacy boolean DEFAULT false,
  isActive boolean DEFAULT true,
  usageCount integer DEFAULT 0,
  permissions character varying DEFAULT 'FIRM_WIDE'::character varying,
  createdBy uuid,
  createdAt timestamp without time zone DEFAULT now(),
  updatedAt timestamp without time zone DEFAULT now(),
  CONSTRAINT MemoTemplate_pkey PRIMARY KEY (id),
  CONSTRAINT MemoTemplate_createdBy_fkey FOREIGN KEY (createdBy) REFERENCES public.User(id)
);
CREATE TABLE public.MemoTemplateSection (
  id uuid NOT NULL DEFAULT gen_random_uuid(),
  templateId uuid,
  title character varying NOT NULL,
  description text,
  aiEnabled boolean DEFAULT false,
  aiPrompt text,
  mandatory boolean DEFAULT false,
  requiresApproval boolean DEFAULT false,
  sortOrder integer DEFAULT 0,
  createdAt timestamp without time zone DEFAULT now(),
  CONSTRAINT MemoTemplateSection_pkey PRIMARY KEY (id),
  CONSTRAINT MemoTemplateSection_templateId_fkey FOREIGN KEY (templateId) REFERENCES public.MemoTemplate(id)
);
CREATE TABLE public.Notification (
  id uuid NOT NULL DEFAULT gen_random_uuid(),
  userId uuid NOT NULL,
  type text NOT NULL,
  title text NOT NULL,
  message text,
  dealId uuid,
  documentId uuid,
  isRead boolean DEFAULT false,
  createdAt timestamp with time zone DEFAULT now(),
  CONSTRAINT Notification_pkey PRIMARY KEY (id),
  CONSTRAINT Notification_userId_fkey FOREIGN KEY (userId) REFERENCES public.User(id),
  CONSTRAINT Notification_dealId_fkey FOREIGN KEY (dealId) REFERENCES public.Deal(id)
);
CREATE TABLE public.Task (
  id uuid NOT NULL DEFAULT gen_random_uuid(),
  title text NOT NULL,
  description text,
  status text NOT NULL DEFAULT 'PENDING'::text CHECK (status = ANY (ARRAY['PENDING'::text, 'IN_PROGRESS'::text, 'COMPLETED'::text, 'STUCK'::text])),
  priority text NOT NULL DEFAULT 'MEDIUM'::text CHECK (priority = ANY (ARRAY['LOW'::text, 'MEDIUM'::text, 'HIGH'::text, 'URGENT'::text])),
  assignedTo uuid,
  dealId uuid,
  dueDate timestamp with time zone,
  createdBy uuid,
  firmName text,
  createdAt timestamp with time zone DEFAULT now(),
  updatedAt timestamp with time zone DEFAULT now(),
  CONSTRAINT Task_pkey PRIMARY KEY (id),
  CONSTRAINT Task_assignedTo_fkey FOREIGN KEY (assignedTo) REFERENCES public.User(id),
  CONSTRAINT Task_dealId_fkey FOREIGN KEY (dealId) REFERENCES public.Deal(id),
  CONSTRAINT Task_createdBy_fkey FOREIGN KEY (createdBy) REFERENCES public.User(id)
);
CREATE TABLE public.User (
  id uuid NOT NULL DEFAULT gen_random_uuid(),
  authId uuid UNIQUE,
  email text NOT NULL UNIQUE,
  name text NOT NULL,
  avatar text,
  role text NOT NULL DEFAULT 'MEMBER'::text,
  department text,
  title text,
  phone text,
  isActive boolean DEFAULT true,
  lastLoginAt timestamp with time zone,
  createdAt timestamp with time zone DEFAULT now(),
  updatedAt timestamp with time zone DEFAULT now(),
  firmName text,
  preferences jsonb DEFAULT '{}'::jsonb,
  CONSTRAINT User_pkey PRIMARY KEY (id)
);