erDiagram
    ORGANIZATION {
        uuid id PK
        string name
        string slug UK
        string logo
        string industry
        string website
        jsonb settings "incl. firmProfile"
        string plan
        int maxUsers
        boolean isActive
        uuid createdBy
        timestamp createdAt
    }

    USER {
        uuid id PK
        uuid authId UK "Supabase Auth UUID"
        string email UK
        string name
        string avatar
        string role "ADMIN MEMBER VIEWER OPS"
        string department
        string title
        string phone
        boolean isActive
        timestamp lastLoginAt
        string firmName
        jsonb preferences
        jsonb onboardingStatus
        uuid organizationId FK
        timestamp createdAt
    }

    DEAL {
        uuid id PK
        string name
        uuid companyId FK
        uuid organizationId FK
        string stage "7 pipeline stages"
        string status "ACTIVE CLOSED_WON CLOSED_LOST PASSED"
        string priority "LOW MEDIUM HIGH URGENT"
        float dealSize
        float revenue
        float ebitda
        float irrProjected
        float mom
        string industry
        string description
        text aiThesis
        string icon
        string lastDocument
        timestamp lastDocumentUpdated
        uuid assignedTo FK
        date targetCloseDate
        date actualCloseDate
        string source
        string_arr tags
        int extractionConfidence
        boolean needsReview
        jsonb reviewReasons
        jsonb aiRisks
        timestamp aiCacheUpdatedAt
        jsonb customFields
        string currency "default USD"
        timestamp createdAt
    }

    COMPANY {
        uuid id PK
        uuid organizationId FK
        string name
        string industry
        text description
        string website
        string logo
        string headquarters
        int foundedYear
        int employeeCount
        float annualRevenue
        string linkedinUrl
        timestamp createdAt
    }

    CONTACT {
        uuid id PK
        uuid organizationId FK
        string firstName
        string lastName
        string email
        string phone
        string title
        string company
        string type "BANKER ADVISOR EXECUTIVE LP LEGAL OTHER"
        string linkedinUrl
        text notes
        string_arr tags
        timestamp lastContactedAt
        uuid createdBy FK
        timestamp createdAt
    }

    CONTACT_INTERACTION {
        uuid id PK
        uuid contactId FK
        string type "NOTE MEETING CALL EMAIL OTHER"
        string title
        text description
        timestamp date
        uuid createdBy FK
        timestamp createdAt
    }

    CONTACT_DEAL {
        uuid id PK
        uuid contactId FK
        uuid dealId FK
        string role "BANKER ADVISOR BOARD_MEMBER MANAGEMENT OTHER"
        timestamp createdAt
    }

    CONTACT_RELATIONSHIP {
        uuid id PK
        uuid contactId FK
        uuid relatedContactId FK
        string type "KNOWS REFERRED_BY REPORTS_TO COLLEAGUE INTRODUCED_BY"
        text notes
        uuid createdBy FK
        timestamp createdAt
    }

    DOCUMENT {
        uuid id PK
        uuid dealId FK
        uuid folderId FK
        string name
        string type "CIM TEASER FINANCIAL LEGAL TAX OTHER"
        string fileUrl
        int fileSize
        string mimeType
        jsonb extractedData
        float confidence
        uuid uploadedBy FK
        jsonb aiAnalysis
        timestamp aiAnalyzedAt
        string_arr tags
        boolean isHighlighted
        text extractedText
        string status
        string embeddingStatus "pending processing completed failed"
        int chunkCount
        timestamp embeddedAt
        timestamp createdAt
    }

    FOLDER {
        uuid id PK
        uuid dealId FK
        uuid parentId FK
        string name
        text description
        int fileCount
        boolean isRestricted
        int sortOrder
        uuid createdBy FK
        timestamp createdAt
    }

    FOLDER_INSIGHT {
        uuid id PK
        uuid folderId FK
        text summary
        int completionPercent
        jsonb redFlags
        jsonb missingDocuments
        timestamp generatedAt
    }

    FINANCIAL_STATEMENT {
        uuid id PK
        uuid dealId FK
        uuid documentId FK
        string statementType "INCOME_STATEMENT BALANCE_SHEET CASH_FLOW"
        string period
        string periodType "HISTORICAL PROJECTED LTM"
        jsonb lineItems
        string currency
        string unitScale "MILLIONS THOUSANDS ACTUALS"
        int extractionConfidence "0-100"
        string extractionSource "gpt4o azure vision manual"
        timestamp extractedAt
        timestamp reviewedAt
        uuid reviewedBy FK
        boolean isActive "partial unique idx"
        string mergeStatus "auto needs_review user_resolved"
        timestamp createdAt
    }

    DOCUMENT_CHUNK {
        uuid id PK
        uuid documentId FK
        uuid dealId FK
        int chunkIndex
        text content
        vector embedding "pgvector"
        int tokenCount
        jsonb metadata
        timestamp createdAt
    }

    CONVERSATION {
        uuid id PK
        uuid dealId FK
        uuid userId FK
        string title
        timestamp createdAt
    }

    CHAT_MESSAGE {
        uuid id PK
        uuid dealId FK
        string userId
        string role "user assistant system"
        text content
        jsonb metadata
        timestamp createdAt
    }

    MEMO {
        uuid id PK
        uuid dealId FK
        uuid organizationId FK
        string title
        string projectName
        string type "IC_MEMO TEASER SUMMARY CUSTOM"
        string status "DRAFT REVIEW FINAL ARCHIVED"
        string sponsor
        date memoDate
        int version
        uuid createdBy FK
        uuid lastEditedBy FK
        uuid_arr collaborators
        boolean complianceChecked
        text complianceNotes
        jsonb metadata
        timestamp createdAt
    }

    MEMO_SECTION {
        uuid id PK
        uuid memoId FK
        string type "17 section types"
        string title
        text content
        boolean aiGenerated
        string aiModel
        text aiPrompt
        int sortOrder
        jsonb citations
        jsonb tableData
        jsonb chartConfig
        string status "DRAFT APPROVED NEEDS_REVIEW"
        timestamp createdAt
    }

    MEMO_CONVERSATION {
        uuid id PK
        uuid memoId FK
        uuid userId FK
        string title
        timestamp createdAt
    }

    MEMO_CHAT_MESSAGE {
        uuid id PK
        uuid conversationId FK
        string role "user assistant system"
        text content
        jsonb metadata
        timestamp createdAt
    }

    MEMO_TEMPLATE {
        uuid id PK
        uuid organizationId FK
        string name
        text description
        string category
        boolean isGoldStandard
        boolean isLegacy
        boolean isActive
        int usageCount
        string permissions "FIRM_WIDE etc"
        uuid createdBy FK
        timestamp createdAt
    }

    MEMO_TEMPLATE_SECTION {
        uuid id PK
        uuid templateId FK
        string title
        text description
        boolean aiEnabled
        text aiPrompt
        boolean mandatory
        boolean requiresApproval
        int sortOrder
        timestamp createdAt
    }

    ACTIVITY {
        uuid id PK
        uuid dealId FK
        uuid userId FK
        string type "NOTE_ADDED CALL_LOGGED MEETING_LOGGED EMAIL_LOGGED STAGE_CHANGED DOCUMENT_UPLOADED DEAL_IMPORTED etc"
        string title
        text description
        jsonb metadata
        timestamp scheduledAt
        timestamp completedAt
        string_arr participants
        timestamp createdAt
    }

    NOTIFICATION {
        uuid id PK
        uuid userId FK
        uuid organizationId FK
        string type
        string title
        text message
        uuid dealId FK
        uuid documentId FK
        boolean isRead
        timestamp createdAt
    }

    INVITATION {
        uuid id PK
        uuid organizationId FK
        string email
        string firmName
        string role "ADMIN MEMBER VIEWER"
        uuid invitedBy FK
        string status "PENDING ACCEPTED EXPIRED REVOKED"
        string token UK
        timestamp expiresAt
        timestamp acceptedAt
        timestamp createdAt
    }

    DEAL_TEAM_MEMBER {
        uuid id PK
        uuid dealId FK
        uuid userId FK
        string role "MEMBER default"
        string accessLevel "view edit admin"
        timestamp addedAt
    }

    TASK {
        uuid id PK
        uuid dealId FK
        uuid organizationId FK
        uuid assignedTo FK
        uuid createdBy FK
        string title
        text description
        string status "PENDING IN_PROGRESS COMPLETED STUCK"
        string priority "LOW MEDIUM HIGH URGENT"
        timestamp dueDate
        string firmName
        timestamp createdAt
    }

    AUDIT_LOG {
        uuid id PK
        uuid userId FK
        uuid organizationId FK
        string action
        string entityType
        uuid entityId
        string entityName
        text description
        jsonb changes
        jsonb metadata
        string severity "INFO WARNING ERROR CRITICAL"
        string ipAddress
        string userAgent
        string userEmail
        string userRole
        string requestId
        timestamp createdAt
    }

    WATCHLIST {
        uuid id PK
        uuid organizationId FK
        string companyName
        string industry
        text notes
        uuid addedBy FK
        timestamp createdAt
    }

    ORGANIZATION ||--o{ USER : "has members"
    ORGANIZATION ||--o{ DEAL : "owns"
    ORGANIZATION ||--o{ COMPANY : "tracks"
    ORGANIZATION ||--o{ CONTACT : "manages"
    ORGANIZATION ||--o{ MEMO : "owns"
    ORGANIZATION ||--o{ MEMO_TEMPLATE : "shares"
    ORGANIZATION ||--o{ INVITATION : "sends"
    ORGANIZATION ||--o{ AUDIT_LOG : "logs"
    ORGANIZATION ||--o{ NOTIFICATION : "notifies"
    ORGANIZATION ||--o{ TASK : "assigns"
    ORGANIZATION ||--o{ WATCHLIST : "watches"

    COMPANY ||--o{ DEAL : "is target of"
    DEAL ||--o{ DOCUMENT : "contains"
    DEAL ||--o{ FOLDER : "has"
    DEAL ||--o{ ACTIVITY : "logs"
    DEAL ||--o{ FINANCIAL_STATEMENT : "extracted"
    DEAL ||--o{ CHAT_MESSAGE : "discussed"
    DEAL ||--o{ CONVERSATION : "scoped to"
    DEAL ||--o{ DEAL_TEAM_MEMBER : "assigned"
    DEAL ||--o{ DOCUMENT_CHUNK : "indexed"
    DEAL ||--o{ MEMO : "reports"
    DEAL ||--o{ NOTIFICATION : "alerts on"
    DEAL ||--o{ TASK : "tracks"

    USER ||--o{ ACTIVITY : "performs"
    USER ||--o{ NOTIFICATION : "receives"
    USER ||--o{ DEAL_TEAM_MEMBER : "member of"
    USER ||--o{ MEMO : "creates"
    USER ||--o{ CONVERSATION : "owns"
    USER ||--o{ MEMO_CONVERSATION : "owns"
    USER ||--o{ INVITATION : "sends"
    USER ||--o{ TASK : "assigned to"

    DOCUMENT ||--o{ DOCUMENT_CHUNK : "chunked into"
    DOCUMENT ||--o{ FINANCIAL_STATEMENT : "extracted from"
    DOCUMENT ||--o{ NOTIFICATION : "alerts on"
    FOLDER ||--o{ DOCUMENT : "contains"
    FOLDER ||--o{ FOLDER : "has subfolders"
    FOLDER ||--o{ FOLDER_INSIGHT : "analyzed by"

    MEMO ||--o{ MEMO_SECTION : "has"
    MEMO ||--o{ MEMO_CONVERSATION : "discussed in"
    MEMO_CONVERSATION ||--o{ MEMO_CHAT_MESSAGE : "contains"
    MEMO_TEMPLATE ||--o{ MEMO_TEMPLATE_SECTION : "defines"

    CONTACT ||--o{ CONTACT_INTERACTION : "has"
    CONTACT ||--o{ CONTACT_DEAL : "linked to"
    DEAL ||--o{ CONTACT_DEAL : "linked to"
    CONTACT ||--o{ CONTACT_RELATIONSHIP : "knows"
